Thu Mar 18 22:01:39 GMT 2004 (njh)
----------------------------------
  * libclamav:	If a message only contains a single RFC822 message that has no
	encoding don't save for scanning

Thu Mar 18 14:16:19 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Added bounce and handle text/plain encoded
		messages

Thu Mar 18 15:04:41 CET 2004 (tk)
---------------------------------
  * clamdscan: in the LocalSocket mode the server2 address struct was not
	       properly initialized. Fixed by "Nemosoft Unv."
	       <nemosoft*smcc.demon.nl>.

Thu Mar 18 09:56:24 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Simplify the code, and make it work all relevant
	sample documents I have.

Wed Mar 17 19:48:56 GMT 2004 (njh)
----------------------------------
  * clamav-milter: upissued history to 0.70
  * libclamav/message.c: Handle spaces before the disposition type
  * libclamav/mbox.c:	Added some speed ups and reduced memory usage when
  		scanning embedded RFC822 messages

Wed Mar 17 15:06:44 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Add VBA signature for MacOffice X

Wed Mar 17 11:53:05 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: VBA alignment check. Should now work with
	all MacOffice documents.

Wed Mar 17 09:32:45 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Add support for MacOffice98 documents

Tue Mar 16 20:43:20 CET 2004 (tk)
---------------------------------
  * libclamav: unrarlib: don't use UnstoreFile() because it causes memory
	       corruption. Restored support for standard archives (yesterday's
	       fix disabled RAR support completely).

Mon Mar 15 20:53:10 CET 2004 (tk)
---------------------------------
  * clamav-milter: version number increased to 0.70
  V 0.70-rc

Mon Mar 15 18:40:44 GMT 2004 (trog)
-----------------------------------
  * libvlamav/ole2_extract.c: fix cli_malloc() error